--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
-    "sharp": "^0.34.3",
+    "sharp": "^0.34.5",
     "streamifier": "^0.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/server.js"
+    "start": "npm run build && node dist/Server.js"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
