--- a/motherhomes-frontend/package.json
+++ b/motherhomes-frontend/package.json
@@ -20,6 +20,7 @@
     "@react-jvectormap/world": "^1.1.2",
     "@types/file-saver": "^2.0.7",
     "@types/leaflet": "^1.9.19",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/swiper": "^5.4.3",
     "apexcharts": "^4.1.0",
     "axios": "^1.10.0",
@@ -28,6 +29,7 @@
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
+    "mapbox-gl": "^3.18.1",
     "react": "^19.0.0-rc.1",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
