--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "streamifier": "^0.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^4.0.5"
   },
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/Server.js"
+    "start": "npm run build && node dist/Server.js",
+    "seed": "npm run build && node dist/seed.js"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -40,6 +42,9 @@
     "@types/streamifier": "^0.1.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
