--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,12 @@
   "builds": [
     {
       "src": "src/app.ts",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "motherhomes-frontend/public/carousel_deployment/**"
+        ]
+      }
     },
     {
       "src": "motherhomes-frontend/package.json",
@@ -20,6 +25,10 @@
     },
     {
       "src": "/api",
+      "dest": "src/app.ts"
+    },
+    {
+      "src": "/carousel_deployment/(.*)",
       "dest": "src/app.ts"
     },
     {
